--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.13.2",
     "framer-motion": "^12.23.24",
@@ -17,7 +19,8 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-simple-typewriter": "^5.0.1",
-    "tailwindcss": "^4.1.16"
+    "tailwindcss": "^4.1.16",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
